<resources>
    <string name="app_name">News App</string>
    <string name="str_top_headline">Top HeadLines</string>
    <string name="str_news_sources">News Sources</string>
    <string name="str_countries">Countries</string>
    <string name="str_language">Languages</string>
    <string name="str_search">Search</string>
    <string name="str_title">Title</string>
    <string name="str_source_name">BBC</string>
    <string name="str_country_name">India</string>
</resources>