<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnTopHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/str_top_headline"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNewsSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/str_news_sources"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCountries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/str_countries"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLanguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/str_language"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/str_search"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>